<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Station Info Category -->
    <PreferenceCategory
        app:title="@string/settings_category_general"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:key="callsign"
            app:title="@string/settings_callsign"
            app:summary="@string/settings_callsign_summary"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            app:key="grid"
            app:title="@string/settings_grid"
            app:summary="@string/settings_grid_summary"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            app:key="my_info"
            app:title="@string/settings_info"
            app:summary="@string/settings_info_summary"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            app:key="my_status"
            app:title="@string/settings_status"
            app:summary="@string/settings_status_summary"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <!-- Audio Category -->
    <PreferenceCategory
        app:title="@string/settings_category_audio"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="tx_boost_enabled"
            app:title="@string/settings_tx_boost"
            app:summary="@string/settings_tx_boost_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <!-- Radio Category -->
    <PreferenceCategory
        app:title="@string/settings_category_radio"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="rig_control_enabled"
            app:title="@string/settings_rig_control"
            app:summary="@string/settings_rig_control_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />

        <ListPreference
            app:key="rig_type"
            app:title="@string/settings_rig_type"
            app:summary="@string/settings_rig_type_summary"
            app:entries="@array/rig_type_entries"
            app:entryValues="@array/rig_type_values"
            app:defaultValue="none"
            app:dependency="rig_control_enabled"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <ListPreference
            app:key="transmit_mode"
            app:title="@string/settings_transmit_mode"
            app:summary="@string/settings_transmit_mode_summary"
            app:entries="@array/transmit_mode_entries"
            app:entryValues="@array/transmit_mode_values"
            app:defaultValue="none"
            app:dependency="rig_control_enabled"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            app:key="rigctld_host"
            app:title="@string/settings_rigctld_host"
            app:summary="@string/settings_rigctld_host_summary"
            app:defaultValue="localhost"
            app:dependency="rig_control_enabled"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            app:key="rigctld_port"
            app:title="@string/settings_rigctld_port"
            app:summary="@string/settings_rigctld_port_summary"
            app:defaultValue="4532"
            app:dependency="rig_control_enabled"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <PreferenceCategory
            app:title="@string/settings_hamlib_usb_category"
            app:dependency="rig_control_enabled"
            app:iconSpaceReserved="false">

            <ListPreference
                app:key="rig_hamlib_model"
                app:title="@string/settings_hamlib_model"
                app:summary="@string/settings_hamlib_model_summary"
                app:defaultValue="0"
                app:useSimpleSummaryProvider="true"
                app:iconSpaceReserved="false" />

            <ListPreference
                app:key="rig_hamlib_usb_port"
                app:title="@string/settings_hamlib_usb_port"
                app:summary="@string/settings_hamlib_usb_port_summary"
                app:defaultValue="auto"
                app:useSimpleSummaryProvider="true"
                app:iconSpaceReserved="false" />

            <EditTextPreference
                app:key="rig_serial_baud"
                app:title="@string/settings_hamlib_baud_rate"
                app:summary="@string/settings_hamlib_baud_rate_summary"
                app:defaultValue="9600"
                app:useSimpleSummaryProvider="true"
                app:iconSpaceReserved="false" />

            <ListPreference
                app:key="rig_serial_data_bits"
                app:title="@string/settings_hamlib_data_bits"
                app:summary="@string/settings_hamlib_data_bits_summary"
                app:entries="@array/serial_data_bits_entries"
                app:entryValues="@array/serial_data_bits_values"
                app:defaultValue="8"
                app:useSimpleSummaryProvider="true"
                app:iconSpaceReserved="false" />

            <ListPreference
                app:key="rig_serial_stop_bits"
                app:title="@string/settings_hamlib_stop_bits"
                app:summary="@string/settings_hamlib_stop_bits_summary"
                app:entries="@array/serial_stop_bits_entries"
                app:entryValues="@array/serial_stop_bits_values"
                app:defaultValue="1"
                app:useSimpleSummaryProvider="true"
                app:iconSpaceReserved="false" />

            <ListPreference
                app:key="rig_serial_parity"
                app:title="@string/settings_hamlib_parity"
                app:summary="@string/settings_hamlib_parity_summary"
                app:entries="@array/serial_parity_entries"
                app:entryValues="@array/serial_parity_values"
                app:defaultValue="none"
                app:useSimpleSummaryProvider="true"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>

    </PreferenceCategory>

    <!-- Network Category -->
    <PreferenceCategory
        app:title="@string/settings_category_network"
        app:iconSpaceReserved="false">

        <!-- TODO: Enable when PSKReporter support is implemented. -->
        <!--
        <SwitchPreferenceCompat
            app:key="psk_reporter"
            app:title="@string/settings_psk_reporter"
            app:summary="@string/settings_psk_reporter_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />
        -->

        <!-- TODO: Enable when APRS-IS support is implemented. -->
        <!--
        <SwitchPreferenceCompat
            app:key="aprs_is"
            app:title="@string/settings_aprs_is"
            app:summary="@string/settings_aprs_is_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />
        -->

    </PreferenceCategory>

    <!-- General Category -->
    <PreferenceCategory
        app:title="@string/settings_category_general"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="autoreply_enabled"
            app:title="@string/settings_autoreply"
            app:summary="@string/settings_autoreply_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="relay_enabled"
            app:title="@string/settings_relay"
            app:summary="@string/settings_relay_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="keep_screen_on"
            app:title="@string/settings_keep_screen_on"
            app:summary="@string/settings_keep_screen_on_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="persist_decodes"
            app:title="@string/settings_persist_decodes"
            app:summary="@string/settings_persist_decodes_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
