<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_monitor">

    <fragment
        android:id="@+id/navigation_monitor"
        android:name="com.js8call.example.ui.MonitorFragment"
        android:label="@string/nav_monitor" />

    <fragment
        android:id="@+id/navigation_decodes"
        android:name="com.js8call.example.ui.DecodeFragment"
        android:label="@string/nav_decodes" />

    <fragment
        android:id="@+id/navigation_transmit"
        android:name="com.js8call.example.ui.TransmitFragment"
        android:label="@string/nav_transmit" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.js8call.example.ui.SettingsFragment"
        android:label="@string/nav_settings" />
</navigation>
